# hf2ollama

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  hf2ollama.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: check-issue.yml  ci.yml  publish.yml
docs/: README_AR.md  README_BN.md  README_ES.md  README_FR.md  README_HI.md  README_PT.md  README_RU.md  README_UR.md  README_ZH.md
tests/: test_hf2ollama.py
