[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf2ollama"
version = "0.1.0"
description = "Download a HuggingFace model and convert it to GGUF for Ollama."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["huggingface", "ollama", "gguf", "llama.cpp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "huggingface_hub>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wachawo/hf2ollama"
Repository = "https://github.com/wachawo/hf2ollama.git"
Documentation = "https://github.com/wachawo/hf2ollama#readme"
"Bug Reports" = "https://github.com/wachawo/hf2ollama/issues"

[project.scripts]
hf2ollama = "hf2ollama:main"

[tool.setuptools]
py-modules = ["hf2ollama"]
