[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf2ollama"
version = "0.0.2"
description = "Download a HuggingFace model and convert it to GGUF for Ollama."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["huggingface", "ollama", "gguf", "llama.cpp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "huggingface_hub>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "black>=24.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "build>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/wachawo/hf2ollama"
Repository = "https://github.com/wachawo/hf2ollama.git"
Documentation = "https://github.com/wachawo/hf2ollama#readme"
"Bug Reports" = "https://github.com/wachawo/hf2ollama/issues"

[project.scripts]
hf2ollama = "hf2ollama:main"

[tool.setuptools]
py-modules = ["hf2ollama"]

[tool.black]
line-length = 180
target-version = ["py311"]

[tool.ruff]
line-length = 180
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
# E501: long lines (we cap via line-length, but keep some tables/URLs)
# UP009: keep the `# -*- coding: utf-8 -*-` header per project convention
ignore = ["E501", "UP009"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
required_plugins = ["pytest-cov"]
addopts = "-ra -q -p pytest_cov --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["hf2ollama"]

[tool.coverage.report]
show_missing = true
skip_empty = true
